fix: org-chart gap between toolbar and chart nodes reduced (#143)
fix: org-chart gap between toolbar and chart nodes reduced

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -14,7 +14,9 @@
     background-color: #F3F5F8;
     font-family: var(--bs-body-font-family);
 }
-
+.pt-8{
+    padding-top: 8rem;
+}
 [data-n-id] rect {
     filter: drop-shadow(0px 0.4375rem 0.75rem rgba(0, 0, 0, .1));
     stroke-opacity: 25%;
@@ -50,13 +52,16 @@
 
 .boc-light {
     overflow: visible !important;
+    --bs-bg-opacity: 0 !important;
     .boc-filter{
         display: none;
         @extend .w-100,.px-3;
-        top: -130px !important;
-        left: 0 !important;
+        top: -2px !important;
+        left: 0px !important;
         @media (max-width:1280px) {
-            top: -105px !important;
+            top: -2px !important;
+        
+
         }
         div[data-filter-menu="DBA"]{
             left: 1.25%;
@@ -285,7 +290,7 @@
         display: none;
     }
     .boc-search{
-        top: -199px !important;
+        top: -74px !important;
         right: 130px !important;
         z-index: 9;
         .boc-form-field{
@@ -334,7 +339,7 @@
     }
     div[data-ctrl-menu]{
         right: 2px !important;
-        top: -181px !important;
+        top: -55px !important;
         hr{
             background-color: #231F20 !important;
             height: 2px !important;
@@ -358,7 +363,7 @@
     
     @media (max-width:1280px) {
         .boc-search{
-         top: -176px !important;
+         top: -68px !important;
          right: 112px !important; 
          .boc-form-field{
             .boc-input{
@@ -369,7 +374,7 @@
          }
         }
         div[data-ctrl-menu]{
-            top: -156px !important;
+            top: -49px !important;
         }
      }
 
